# devhub-dnas

./: .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  default.nix  devhub-lock.json  flake.nix  nixpkgs.nix  pkgs.nix
bundled/: happ.yaml
bundled/dnarepo/: dna.yaml
bundled/dnas/: dna.yaml
bundled/happs/: dna.yaml
bundled/web_assets/: dna.yaml
devhub_sdk/: Cargo.toml  README.md
devhub_sdk/src/: lib.rs  link_base.rs
devhub_types/: Cargo.toml
devhub_types/src/: base_zome_functions.rs  constants.rs  dna_entry_types.rs  dnarepo_entry_types.rs  errors.rs  happ_entry_types.rs  helper_functions.rs  lib.rs  web_asset_entry_types.rs
dna_reply_types/: Cargo.toml
dna_reply_types/src/: lib.rs
dna_utils/: Cargo.toml
dna_utils/src/: errors.rs  lib.rs
dnas/app_hub/: dna.yaml
dnas/app_hub/entry_types/: Cargo.toml
dnas/app_hub/scoped_types/: Cargo.toml
dnas/app_hub/sdk/: Cargo.toml
dnas/app_hub/sdk/src/: lib.rs  webapp_package_anchor.rs
dnas/app_hub/zomelets/: package-lock.json  package.json
dnas/apphub/: Makefile  dna.yaml
dnas/apphub/scoped_types/: Cargo.toml
dnas/apphub/sdk/: Cargo.toml  README.md
dnas/apphub/sdk/src/: lib.rs  webapp_package_anchor.rs
dnas/apphub/types/: Cargo.toml  README.md
dnas/apphub/types/src/: app_entry.rs  holochain_types.rs  lib.rs  ui_entry.rs  webapp_entry.rs  webapp_package_entry.rs  webapp_package_version_entry.rs
dnas/apphub/zomelets/: README.md  package-lock.json  package.json  webpack.config.js
dnas/dna_hub/: dna.yaml
dnas/dna_hub/entry_types/: Cargo.toml
dnas/dna_hub/entry_types/src/: dna_entry.rs  holochain_types.rs  lib.rs
dnas/dna_hub/scoped_types/: Cargo.toml
dnas/dna_hub/sdk/: Cargo.toml
dnas/dna_hub/types/: Cargo.toml
dnas/dna_hub/zomelets/: package-lock.json  package.json
dnas/dnahub/: Cargo.toml  Makefile  dna.yaml
dnas/dnahub/scoped_types/: Cargo.toml
dnas/dnahub/sdk/: Cargo.toml  README.md
dnas/dnahub/sdk/src/: lib.rs
dnas/dnahub/types/: Cargo.toml  README.md
dnas/dnahub/zomelets/: README.md  package-lock.json  package.json  webpack.config.js
dnas/dnarepo/: Cargo.toml
dnas/web_assets/: Cargo.toml
dnas/zome_hub/: dna.yaml
dnas/zome_hub/entry_types/: Cargo.toml
dnas/zome_hub/scoped_types/: Cargo.toml
dnas/zomehub/: Makefile  dna.yaml
docs/: API.md  Entity_Models.md  Entry_Types.md
docs/zomes/: DNA_Library.md  Web_Assets.md  hApp_Library.md
essence_payloads/: Cargo.toml  README.md
essence_payloads/src/: lib.rs  utils.rs
happ/: happ.yaml
hc_entities/: Cargo.toml
hc_entities/src/: lib.rs  types.rs
js-devhub-entities/: CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  webpack.config.js
js-devhub-entities/src/: index.js
js-devhub-entities/tests/: index.html
recipes/happs/: Cargo.toml
tests/: Makefile  debug_dna_pack.js  package-lock.json  package.json  test_happ.yaml  update_happ_dna_yaml.js  utils.js
tests/integration/: setup.js  test_app_hub.js  test_apphub.js  test_dna_hub.js  test_dnahub.js  test_dnarepo.js  test_generic_fns.js  test_guis.js  test_happs.js  test_multiple.js  test_real_app_upload.js  test_real_dna_upload.js  test_real_zome_upload.js  test_reviews.js  test_webapp.js  test_webapp_upload.js  test_webassets.js  test_zome_hub.js  test_zome_mere_memory.js  test_zomehub.js  test_zomehub_group_management.js
tests/src/: test_dnarepo.js  test_dnas.js  test_happs.js  test_multiple.js  test_web_assets.js  utils.js
tests/test_happ/: happ.yaml
tests/test_webhapp/: web-happ.yaml
zomes/: Cargo.toml
zomes/app_hub/: Cargo.toml
zomes/app_hub/src/: lib.rs  validation.rs
zomes/app_hub_csr/: Cargo.toml
zomes/app_hub_csr/src/: app_handlers.rs  constants.rs  gui_release.rs  lib.rs  packaging.rs  ui_handlers.rs  webapp_handlers.rs  webapp_package_handlers.rs  webapp_package_version_handlers.rs
zomes/apphub/: Cargo.toml
zomes/apphub/src/: lib.rs  validation.rs
zomes/apphub/src/validation/: create_entry.rs  create_link.rs  delete_entry.rs  delete_link.rs  update_entry.rs
zomes/apphub_csr/: Cargo.toml
zomes/apphub_csr/src/: app_handlers.rs  lib.rs  ui_handlers.rs  webapp_handlers.rs  webapp_package_anchor.rs  webapp_package_base.rs  webapp_package_handlers.rs  webapp_package_version_handlers.rs
zomes/dna_hub/: Cargo.toml
zomes/dna_hub/src/: lib.rs
zomes/dna_hub_csr/: Cargo.toml
zomes/dna_library/: Cargo.toml
zomes/dna_library/src/: constants.rs  dna.rs  dnaversions.rs  lib.rs  packaging.rs  profile.rs  validation.rs  zome.rs  zomeversion.rs
zomes/dnahub/: Cargo.toml
zomes/dnahub/src/: lib.rs
zomes/dnahub/src/validation/: create_entry.rs  delete_entry.rs  update_entry.rs
zomes/dnahub_csr/: Cargo.toml
zomes/dnahub_csr/src/: dna_handlers.rs  lib.rs
zomes/dnarepo_core/: Cargo.toml
zomes/dnarepo_core/src/: lib.rs  validation.rs
zomes/happ_library/: Cargo.toml
zomes/happ_library/src/: constants.rs  gui.rs  gui_release.rs  happ.rs  happ_release.rs  lib.rs  packaging.rs  validation.rs  webhapp_release.rs
zomes/happs_core/: Cargo.toml
zomes/happs_core/src/: lib.rs  validation.rs
zomes/mere_memory/: Cargo.toml  README.md
zomes/mere_memory/src/: entry_types.rs  errors.rs  handlers.rs  lib.rs
zomes/reviews/: Cargo.toml
zomes/reviews/src/: constants.rs  lib.rs  reaction_summaries.rs  reactions.rs  review_summaries.rs  reviews.rs  validation.rs
zomes/web_assets/: Cargo.toml
zomes/web_assets/src/: constants.rs  files.rs  lib.rs
zomes/web_assets_core/: Cargo.toml
zomes/web_assets_core/src/: lib.rs  validation.rs
zomes/zome_hub/: Cargo.toml
zomes/zome_hub/src/: lib.rs  validation.rs
zomes/zome_hub_csr/: Cargo.toml
zomes/zome_hub_csr/src/: constants.rs  dna.rs  dnaversions.rs  lib.rs  packaging.rs
zomes/zomehub/: Cargo.toml
zomes/zomehub/src/: lib.rs  validation.rs
zomes/zomehub/src/validation/: create_entry.rs  delete_entry.rs  update_entry.rs
zomes/zomehub_csr/: Cargo.toml
zomes/zomehub_csr/src/: group_link_handlers.rs  lib.rs  zome_handlers.rs  zome_package_base.rs  zome_package_handlers.rs  zome_package_version_handlers.rs
(+101 files in other folders)
