[workspace]
members = [
  "dnas/zomehub/types",
  "dnas/zomehub/sdk",
  "dnas/dnahub/types",
  "dnas/dnahub/sdk",
  "dnas/apphub/types",
  "dnas/apphub/sdk",
  "zomes/*"
]
resolver = "2"

[workspace.dependencies]
hc_coop_content_sdk = "0.7"
hc_portal_sdk = "0.8"
hc_zomehub_sdk = { version = "0.1", path = "dnas/zomehub/sdk" }
hdi = "=0.5.0-dev.12"
hdk = "=0.4.0-dev.14"
lazy_static = "1.4"
serde = "1"
zomehub = { path = "zomes/zomehub" }
