[workspace]
members = [
  "dnas/zomehub/types",
  "dnas/zomehub/sdk",
  "dnas/dnahub/types",
  "dnas/dnahub/sdk",
  "dnas/apphub/types",
  "dnas/apphub/sdk",
  "zomes/*"
]
resolver = "2"

[workspace.dependencies]
hc_coop_content_types = "0.7.0-dev.0"
hc_coop_content_sdk = "0.8.0-dev.0"
hc_crud_caps = "0.18"
hc_portal_sdk = "0.9"
hc_zomehub_types = { version = "0.1", path = "dnas/zomehub/types" }
hc_zomehub_sdk = { version = "0.1", path = "dnas/zomehub/sdk" }
hdi = "=0.5.0-dev.17"
hdk = "=0.4.0-dev.19"
lazy_static = "1.4"
serde = "1"
zomehub = { path = "zomes/zomehub" }
