[package]
name = "hc_devhub_sdk"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/devhub-dnas"
description = "Base SDK used by the DevHub DNA's SDKs"
readme = "README.md"

[lib]
name = "devhub_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = "0.14.1"
serde = "1"
whi_hdk_extensions = "0.8.1"
