[package]
name = "devhub_types"
version = "0.2.0-beta-rc.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "devhub_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
flate2 = "1"
hc_crud_ceps = "0.76.0"
hdk = "0.2.0-beta-rc.1"
hex = "0"
rmp-serde = "0.15.5"
serde = "1"
serde_yaml = "0.8.17"
sha2 = "0"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
serde_json = "1"
