[package]
name = "devhub_types"
version = "0.1.4"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "devhub_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
flate2 = "1"
hc_crud_ceps = { git = "https://github.com/mjbrisebois/rust-hc-crud-ceps.git", rev = "91438a2e167b5bfea3c6673fe2f1da827c7da2c9" }
hdk = "0.1.4"
hex = "0"
rmp-serde = "0.15.5"
serde = "1"
serde_yaml = "0.8.17"
sha2 = "0"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
serde_json = "1"
