[package]
name = "hc_entities"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "hc_entities"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "0.0.106"
serde = "1.0"

[dev-dependencies]
rand = "0.8.3"
serde_json = "1.0"
thiserror = "1.0"
