[package]
name = "app_hub"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "app_hub"
crate-type = ["cdylib", "rlib"]

[dependencies]
app_hub_types = { path = "../../dnas/app_hub/entry_types" }
hc_crud_caps = "0.10.2"
serde = "1"

# temporary fix for compile error in
getrandom = { version = "=0.2.7", features = ["custom"] }
