[package]
name = "app_hub_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "app_hub_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
app_hub = { path = "../app_hub" }
app_hub_sdk = { path = "../../dnas/app_hub/sdk" }
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
