[package]
name = "apphub"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "apphub"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_apphub_types = { version = "0.2", path = "../../dnas/apphub/types" }
hc_crud_caps = "0.15"
serde = "1"
