[package]
name = "apphub_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "apphub_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
apphub = { path = "../apphub" }
# hc_apphub_sdk = "0.1"
hc_apphub_sdk = { path = "../../dnas/apphub/sdk" }
# hc_dnahub_types = "0.1"
hc_dnahub_types = { path = "../../dnas/dnahub/types" }
hc_portal_sdk = "0.1.3"
lazy_static = "1.4"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
