[package]
name = "dna_hub"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dna_hub"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
dna_hub_types = { path = "../../dnas/dna_hub/entry_types" }
zome_hub_types = { path = "../../dnas/zome_hub/entry_types" }
