[package]
name = "dna_library"
version = "0.2.0-beta-rc.4"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dna_library"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
dnarepo_core = {path = "../dnarepo_core"}
hc_crud_ceps = "0.77.0"
mere_memory_types = "0.82.0"
hdk = "0.2.0-beta-rc.4"
hex = "0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
