[package]
name = "dna_library"
version = "0.1.3-beta-rc.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dna_library"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
dnarepo_core = {path = "../dnarepo_core"}
hc_crud_ceps = { git = "https://github.com/mjbrisebois/rust-hc-crud-ceps.git", rev = "1f4295a79e93438474c4cf7a8d304e4143a4b94f" }
mere_memory_types = { git = "https://github.com/mjbrisebois/hc-zome-mere-memory.git", rev = "d369ef970ae4effa6ac580467c559eb0a48c42bb" }
hdk = "0.1.3-beta-rc.1"
hex = "0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
