[package]
name = "dnahub"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dnahub"
crate-type = ["cdylib", "rlib"]

[dependencies]
# hc_dnahub_types = "0.2"
hc_dnahub_types = { path = "../../dnas/dnahub/types" }
hc_crud_caps = "0.13"
serde = "1"
