[package]
name = "dnahub"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "dnahub"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_dnahub_types = { version = "0.2", path = "../../dnas/dnahub/types" }
hc_crud_caps = "0.17"
serde = "1"
