[package]
name = "dnahub_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dnahub_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
dnahub = { path = "../dnahub" }
hc_devhub_sdk = { path = "../../devhub_sdk" }
hc_portal_sdk = "0.1.1"
serde = "1"
