[package]
name = "dnarepo_core"
version = "0.2.0-beta-rc.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dnarepo_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
hc_crud_ceps = "0.76.0"
hdi = "0.3.0-beta-rc.1"
hex = "0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
