[package]
name = "dnarepo_core"
version = "0.1.3-beta-rc.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dnarepo_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
hc_crud_ceps = { git = "https://github.com/mjbrisebois/rust-hc-crud-ceps.git", rev = "1f4295a79e93438474c4cf7a8d304e4143a4b94f" }
hdi = "0.2.3-beta-rc.0"
hex = "0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
