[package]
name = "hc_zome_mere_memory"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/devhub-dnas/"
description = "A Holochain Zome for storing large or small byte values"
readme = "README.md"

[lib]
name = "mere_memory"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1.0"
hdk = "0.0.106"
serde = "1"
serde_derive = "1"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
