[package]
name = "reviews"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "reviews"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
dnarepo_core = {path = "../dnarepo_core"}
hc_crud_caps = "0.9.0"
hdk = "=0.2.1"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
whi_hdi_extensions = "0.2.1"

[dev-dependencies]
rand = "0.8.3"
