[package]
name = "web_assets"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "web_assets"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
web_assets_core = {path = "../web_assets_core"}
hc_crud_caps = "0.9.0"
hdk = "=0.2.1"
mere_memory_types = "0.88.0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
