[package]
name = "web_assets"
version = "0.1.4"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "web_assets"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
web_assets_core = {path = "../web_assets_core"}
hc_crud_ceps = { git = "https://github.com/mjbrisebois/rust-hc-crud-ceps.git", rev = "91438a2e167b5bfea3c6673fe2f1da827c7da2c9" }
mere_memory_types = { git = "https://github.com/mjbrisebois/hc-zome-mere-memory.git", rev = "d369ef970ae4effa6ac580467c559eb0a48c42bb" }
hdk = "0.1.4"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
