[package]
name = "web_assets"
version = "0.1.5"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "web_assets"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
web_assets_core = {path = "../web_assets_core"}
hc_crud_ceps = { git = "https://github.com/mjbrisebois/rust-hc-crud-ceps.git", rev = "9493f320af8e5889d07993a259df646c99f163f6" }
mere_memory_types = { git = "https://github.com/mjbrisebois/hc-zome-mere-memory.git", rev = "d369ef970ae4effa6ac580467c559eb0a48c42bb" }
hdk = "0.1.5"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
