[package]
name = "web_assets_core"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "web_assets_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
hc_crud_caps = "0.9.0"
# hdi = "=0.3.1"
hex = "0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
whi_hdi_extensions = "0.2.1"

[dev-dependencies]
rand = "0.8.3"
