[package]
name = "zomehub"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "zomehub"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = "0.17"
hc_zomehub_types = { version = "0.1", path = "../../dnas/zomehub/types" }
serde = "1"
