[package]
name = "zomehub"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "zomehub"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_coop_content_types = { workspace = true }
hc_crud_caps = { workspace = true }
hc_zomehub_types = { workspace = true }
serde = { workspace = true }
