[package]
name = "zomehub_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "zomehub_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_devhub_sdk = { path = "../../devhub_sdk" }
hc_portal_sdk = "0.1.3"
hc_zomehub_sdk = { path = "../../dnas/zomehub/sdk" }
lazy_static = "1.4"
serde = "1"
zomehub = { path = "../zomehub" }
