[package]
name = "zomehub_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "zomehub_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_coop_content_sdk = { workspace = true }
hc_portal_sdk = { workspace = true }
hc_zomehub_sdk = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
zomehub = { workspace = true }
