[package]
name = "app_hub_sdk"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "app_hub_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
app_hub_scoped_types = { path = "../scoped_types" }
hc_devhub_sdk = { path = "../../../devhub_sdk" }
serde = "1"
