[package]
name = "hc_apphub_sdk"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/devhub-dnas"
description = "SDK for the AppHub DNA Zomes"
readme = "README.md"

[lib]
name = "apphub_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_apphub_types = { path = "../types" }
hc_devhub_sdk = "0.1"
hc_dnahub_sdk = { path = "../../dnahub/sdk" }
# hc_devhub_sdk = { path = "../../../devhub_sdk" }
serde = "1"
