[package]
name = "hc_apphub_sdk"
version = "0.2.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/holochain/devhub-dnas"
description = "SDK for the AppHub DNA Zomes"
readme = "README.md"

[lib]
name = "apphub_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_apphub_types = { version = "0.2", path = "../types" }
hc_devhub_sdk = { version = "0.1", path = "../../../devhub_sdk" }
hc_dnahub_sdk = { version = "0.2", path = "../../dnahub/sdk" }
serde = "1"
