[package]
name = "dnahub_sdk"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dnahub_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
dnahub_types = { path = "../types" }
hc_devhub_sdk = { path = "../../../devhub_sdk" }
serde = "1"
